# agentfuse

./: .gitignore  CHANGELOG.md  LICENSE  README.md  fuse.example.toml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: PROJECT_REPORT.md
docs/superpowers/plans/: 2026-07-04-agentfuse.md
docs/superpowers/specs/: 2026-07-03-agentfuse-design.md
src/agentfuse/: alerting.py  cli.py  config.py  engine.py  meter.py  models.py  parsing.py  server.py  store.py  streaming.py
src/agentfuse/demo/: __init__.py  upstream.py  workload.py
src/agentfuse/policies/: __init__.py  base.py  budget.py  loop.py  rate.py  stall.py
src/agentfuse/templates/: dashboard.html
tests/: test_alerting.py  test_cli.py  test_config.py  test_dashboard.py  test_demo.py  test_engine.py  test_hardening.py  test_meter.py  test_models.py  test_parsing.py  test_policies.py  test_product.py  test_server.py  test_store.py  test_streaming_metering.py
