[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentfuse"
version = "0.1.0"
description = "Runtime control plane for AI agents: live cost metering and circuit breakers"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "mypy>=1.10",
    "ruff>=0.4",
]

[project.scripts]
fuse = "agentfuse.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agentfuse"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
strict = true
files = ["src/agentfuse"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
